Update chức năng sửa lỗi